1.6.11
------
(RB=116643)
All sub-level idl custom annotations are always included in class level.

1.6.10
------
(RB=116608)
Preserve PropertyEventBusImpl constructor backward compatibility

1.6.9
-----
(RB=111712)
Split original Restli example server/client into two versions: Basic and D2. The Basic version does not contain any D2 features.
Improve the D2 version of server and client to fully utilize D2.
Add gradle tasks to start all the variants of servers and clients.
Add gradle task to write D2-related configuration to ZooKeeper.

(RB=111517)
Restore method signatures changed in 1.6.7 to preserve backward compatibility

1.6.8
-----
Revert "Don't log entity body in Rest{Request,Response}Impl.toString(), since it's likely to log sensitive data."

1.6.7
-----
(RB=111517)
Fix a bug in batching multiple get requests into one, and refactor query parameters handling in
Request and RequestBuilder hierarchy.

(RB=108674)
Custom Types will now work as keys.
Keys keep track of their own schemas.
Reference types for keys are annotated in the class level annotation, as a new parameter in
RestLiCollection as keyTyperefClass, or as part of the @Key annotation for associations.

(RB=TBD)
Added docgen to restli-server-standalone config.

(RB=101117)
Custom Types will now work with action parameters.
FieldDefs/Params now keep track of their own schemas.
Action parameter metadata is now calculated in a static block in generated builder code --
no longer generated on the fly at call-time.
Action response metadata is now also calculated in a static block or in the AnnotationReader,
rather than on the fly at call-time.

Fixed a typeref bug that would cause non-custom type typerefs to appear in builders as their
reference types rather than their underlying types.

1.6.6
-----
(RB=112754)
Fix SI-515.  Escape '.'s in keys from QueryParamDataMap so AnyRecords can be encoded as query params.

(RB=106343)
Fix url escaping of string when used as keys in rest.li. (SI-495)

1.6.5
-----